crates/otterzip-ffi/include/otterzip.h

/* OtterZip C API — Auto-generated by cbindgen. DO NOT EDIT.
 * See docs/03-api/ffi-api.md for the authoritative contract. */

#ifndef OTTERZIP_H
#define OTTERZIP_H

#pragma once

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>
#include <stdint.h>
#include <stddef.h>

/**
 * Opaque archive handle exposed to C. The actual storage is a heap-allocated
 * `otterzip_core::Archive` whose pointer we hand back as `*mut OtterzipArchive`.
 * Callers must treat this as opaque — the layout is *not* part of the ABI
 * and may change without bumping `otterzip_abi_version`.
 */
typedef struct {
  uint8_t _private[0];
} OtterzipArchive;

/**
 * Mirror of the C `OtterzipCreateOptions` struct (ffi-api.md §9.1).
 *
 * **ABI v6 (2026-04-30):** trailing `exclude_system_metadata: u8` appended
 * per [docs/02-design/settings-catalog.md](../../docs/02-design/settings-catalog.md)
 * IN-MVP item 9. Older v5 callers reading this struct by value will
 * effectively get `0` for the new field (uninitialised tail), which means
 * "include everything" — same as the previous unconditional behavior, so
 * no behavioral regression for callers that don't update.
 */
typedef struct {
  uint32_t format;
  uint32_t compression;
  uint8_t compression_level;
  uint8_t solid;
  uint8_t preserve_permissions;
  uint8_t preserve_timestamps;
  uint32_t encryption;
  const char *password_utf8;
  size_t password_len;
  uint64_t volume_size_bytes;
  uint32_t thread_count;
  uint8_t exclude_system_metadata;
} OtterzipCreateOptions;

/**
 * Mirror of `OtterzipProgressView` from `ffi-api.md` §8.2. Passed by const
 * pointer to the C callback.
 */
typedef struct {
  uint64_t bytes_processed;
  uint64_t bytes_total;
  uint32_t entries_processed;
  uint32_t entries_total;
  const char *current_entry_utf8;
  size_t current_entry_len;
  uint32_t phase;
  uint64_t elapsed_ms;
} OtterzipProgressView;

/**
 * C function pointer type for progress reporting. Returns 0 to continue,
 * non-zero (typically negative) to request cancellation.
 */
typedef int32_t (*OtterzipProgressCb)(const OtterzipProgressView *progress, void *user_data);

/**
 * Mirror of the C `OtterzipExtractOptions` struct. Field order and types
 * **must** match `ffi-api.md` §8.1; cbindgen reproduces this struct in the
 * generated header so any change here is an ABI change.
 */
typedef struct {
  const char *destination_utf8;
  size_t destination_len;
  uint32_t overwrite_policy;
  uint8_t flatten_paths;
  uint8_t preserve_permissions;
  uint8_t preserve_timestamps;
  uint8_t follow_symlinks;
  uint8_t block_path_traversal;
  /**
   * PR-7A (Phase 7): propagate `Zone.Identifier` ADS from the source
   * archive to extracted files so SmartScreen / UAC keep behaving
   * correctly. ABI-compatible reuse of one of the original 3 reserved
   * padding bytes — older callers initialising the struct to zero get
   * the safe "off" default automatically.
   */
  uint8_t preserve_zone_identifier;
  uint8_t _reserved[2];
  /**
   * ZIP-bomb defence threshold. `0` disables the check; otherwise an
   * entry whose uncompressed/compressed ratio strictly exceeds this
   * limit aborts extraction. Default in [`otterzip_core::ExtractOptions`]
   * is 1000 — callers should pass that explicitly to keep the FFI
   * layer free of hidden defaults.
   */
  uint32_t max_compression_ratio;
  /**
   * Phase 7 — cumulative ratio gate. `0` disables.
   */
  uint32_t max_total_compression_ratio;
  /**
   * Phase 7 — absolute output byte cap. `0` disables.
   */
  uint64_t max_total_output_bytes;
  const char *password_utf8;
  size_t password_len;
  const char *entry_filter_utf8;
  size_t entry_filter_len;
} OtterzipExtractOptions;

/**
 * Mirror of `OtterzipExtractReport`.
 */
typedef struct {
  uint32_t entries_extracted;
  uint32_t entries_skipped;
  uint64_t bytes_written;
  uint32_t warnings_count;
  uint64_t elapsed_ms;
} OtterzipExtractReport;

/**
 * Opaque iterator handle.
 */
typedef struct {
  uint8_t _private[0];
} OtterzipIterator;

/**
 * POD view of an [`Entry`]. The string pointers inside this struct are
 * borrowed from the iterator's last-yielded entry — they remain valid only
 * until the next call to [`otterzip_iterator_next`] (or until the iterator is
 * freed). Callers must copy any data they wish to retain.
 */
typedef struct {
  const char *path_utf8;
  size_t path_len;
  uint8_t is_directory;
  uint8_t is_symlink;
  uint8_t is_encrypted;
  uint8_t _reserved;
  uint64_t uncompressed_size;
  uint64_t compressed_size;
  uint32_t compression;
  uint32_t encryption;
  uint32_t crc32;
  int64_t modified_unix_ms;
  int64_t accessed_unix_ms;
  int64_t created_unix_ms;
  uint32_t attributes;
  uint32_t host_os;
  const char *comment_utf8;
  size_t comment_len;
} OtterzipEntryView;

/**
 * Opaque streaming reader.
 */
typedef struct {
  uint8_t _private[0];
} OtterzipReader;

/**
 * Mirror of `OtterzipTestReport` (`ffi-api.md` §10).
 */
typedef struct {
  uint32_t entries_tested;
  uint32_t entries_corrupted;
  uint64_t elapsed_ms;
} OtterzipTestReport;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Returns a pointer to a null-terminated static version string.
 *
 * # Safety
 * Returned pointer has `'static` lifetime. Do not free.
 */
const char *otterzip_version(void);

uint32_t otterzip_abi_version(void);

/**
 * Initialise the library. Idempotent. Returns 0 on success.
 */
int32_t otterzip_init(void);

void otterzip_shutdown(void);

/**
 * Detect the archive format at `path_utf8` (magic bytes preferred, extension
 * as a tiebreak). On success writes the [`ArchiveFormat`] discriminant into
 * `out_format` and returns [`ErrorCode::Ok`].
 */
int32_t otterzip_detect_format(const char *path_utf8, size_t path_len, uint32_t *out_format);

/**
 * Streaming-friendly variant: classify an in-memory byte prefix.
 * Mirrors `ffi-api.md` §3 `otterzip_detect_format_bytes`.
 */
int32_t otterzip_detect_format_bytes(const uint8_t *data, size_t len, uint32_t *out_format);

/**
 * `Archive::entry_count` mirror.
 */
int32_t otterzip_archive_entry_count(const OtterzipArchive *handle, uint64_t *out_count);

/**
 * `Archive::is_encrypted` mirror. Writes `0` or `1` into `out_bool`.
 */
int32_t otterzip_archive_is_encrypted(const OtterzipArchive *handle, uint8_t *out_bool);

/**
 * `Archive::is_solid` mirror per `ffi-api.md` §5: writes `1`/`0`/`-1`
 * (yes / no / not applicable) into `out_tri`.
 */
int32_t otterzip_archive_is_solid(const OtterzipArchive *handle, int8_t *out_tri);

/**
 * Open an existing archive in read mode. `password_utf8` may be NULL with
 * `password_len = 0`; password support itself lands in Sprint 3 and currently
 * returns [`ErrorCode::FeatureDisabled`].
 *
 * On success the function writes the new handle through `out_handle` and
 * returns [`ErrorCode::Ok`]. On failure `*out_handle` is left untouched.
 */
int32_t otterzip_archive_open(const char *path_utf8,
                              size_t path_len,
                              uint32_t mode,
                              const char *password_utf8,
                              size_t password_len,
                              OtterzipArchive **out_handle);

/**
 * Open a split / spanned archive given an ordered list of volume
 * paths. Layout (per `schema.md` §4 UTF-8 + explicit-length rule):
 *
 *   * `packed_paths_utf8` — one packed UTF-8 buffer holding every
 *     path's bytes back-to-back (no separators, no null terminators).
 *   * `packed_paths_len` — total byte length of that buffer.
 *   * `path_offsets` — array of `path_count` byte offsets into the
 *     packed buffer marking each path's start.
 *   * `path_lengths` — parallel array of `path_count` lengths.
 *
 * On success `out_handle` receives a fresh archive handle to be
 * released via `otterzip_archive_close`. The volumes must be supplied
 * in disk order (volume 1 → last).
 *
 * ABI v8: added.
 */
int32_t otterzip_archive_open_multi(const uint8_t *packed_paths_utf8,
                                    size_t packed_paths_len,
                                    const size_t *path_offsets,
                                    const size_t *path_lengths,
                                    size_t path_count,
                                    uint32_t mode,
                                    OtterzipArchive **out_handle);

/**
 * Close a previously-opened archive. Accepts NULL as a no-op so callers can
 * always defer-free without branching.
 */
void otterzip_archive_close(OtterzipArchive *handle);

/**
 * Read the detected archive format. Returns [`ErrorCode::InvalidHandle`]
 * if `handle` is NULL.
 */
int32_t otterzip_archive_format(const OtterzipArchive *handle, uint32_t *out_format);

/**
 * Open a write-mode archive at `path_utf8`. Returns a handle that must be
 * finalised with [`otterzip_archive_commit`] (or discarded with
 * [`otterzip_archive_rollback`]).
 */
int32_t otterzip_archive_create(const char *path_utf8,
                                size_t path_len,
                                const OtterzipCreateOptions *opts,
                                OtterzipArchive **out_handle);

/**
 * Append a single file to a write-mode archive.
 */
int32_t otterzip_archive_add_file(OtterzipArchive *handle,
                                  const char *src_path_utf8,
                                  size_t src_path_len,
                                  const char *entry_path_utf8,
                                  size_t entry_path_len);

/**
 * Append a directory recursively. `entry_prefix_utf8` may be NULL/empty.
 */
int32_t otterzip_archive_add_directory(OtterzipArchive *handle,
                                       const char *src_dir_utf8,
                                       size_t src_dir_len,
                                       const char *entry_prefix_utf8,
                                       size_t entry_prefix_len);

/**
 * Like [`otterzip_archive_add_directory`] but with a progress + cancel
 * callback that fires once per pre-scan and again after every file
 * written. The callback returns `0` to continue or non-zero to abort,
 * matching the extract-side convention (`ffi-api.md` §8.2).
 *
 * ABI v7 addition — older callers continue to call the no-callback
 * variant. The handle and string arguments stay binary-compatible.
 */
int32_t otterzip_archive_add_directory_p(OtterzipArchive *handle,
                                         const char *src_dir_utf8,
                                         size_t src_dir_len,
                                         const char *entry_prefix_utf8,
                                         size_t entry_prefix_len,
                                         OtterzipProgressCb progress_cb,
                                         void *user_data);

/**
 * Finalise the archive on disk. Consumes the handle — caller must not
 * reuse it (and must not call [`crate::archive::otterzip_archive_close`] on
 * it afterwards).
 */
int32_t otterzip_archive_commit(OtterzipArchive *handle);

/**
 * Discard an in-progress write archive and remove the partial file.
 */
int32_t otterzip_archive_rollback(OtterzipArchive *handle);

const char *otterzip_last_error_message(void);

void otterzip_clear_last_error(void);

/**
 * Extract every entry under `opts.destination`. Returns
 * [`ErrorCode::OperationCanceled`] if the progress callback signals cancel.
 *
 * `out_report` may be NULL — when non-null we always write a report on the
 * success path, and a zeroed report on the cancel path.
 */
int32_t otterzip_archive_extract_all(OtterzipArchive *handle,
                                     const OtterzipExtractOptions *opts,
                                     OtterzipProgressCb progress_cb,
                                     void *user_data,
                                     OtterzipExtractReport *out_report);

/**
 * Construct a new iterator over the entries of `handle`.
 *
 * The iterator holds a borrow of the archive: while the iterator is alive
 * the caller must not close the underlying archive. Always free with
 * [`otterzip_iterator_free`] before [`crate::archive::otterzip_archive_close`].
 */
int32_t otterzip_iterator_new(const OtterzipArchive *handle, OtterzipIterator **out_iter);

/**
 * Advance the iterator. On `OTTERZIP_OK` the `out_entry` view is populated;
 * the embedded string pointers are valid until the next call. On end of
 * iteration returns [`ErrorCode::IteratorEnd`].
 */
int32_t otterzip_iterator_next(OtterzipIterator *iter, OtterzipEntryView *out_entry);

/**
 * Free the iterator. NULL is a no-op.
 */
void otterzip_iterator_free(OtterzipIterator *iter);

int32_t otterzip_reader_open(OtterzipArchive *handle,
                             const char *entry_path_utf8,
                             size_t path_len,
                             OtterzipReader **out_reader);

/**
 * Read up to `buffer_len` bytes into `buffer`. Returns the number of
 * bytes read (>= 0) on success, `0` on EOF, or a negative error code.
 */
int64_t otterzip_reader_read(OtterzipReader *reader, uint8_t *buffer, size_t buffer_len);

void otterzip_reader_close(OtterzipReader *reader);

/**
 * Walk every entry, decompress, verify CRC32 where present. Cancellation
 * works the same as `otterzip_archive_extract_all`.
 */
int32_t otterzip_archive_test(const OtterzipArchive *handle,
                              OtterzipProgressCb progress_cb,
                              void *user_data,
                              OtterzipTestReport *out_report);

/**
 * Look up the path of the i-th corrupted entry from the most recent
 * `otterzip_archive_test` call (TLS). The pointer remains valid until
 * the next test run on this thread.
 */
int32_t otterzip_archive_test_corrupted_entry(const OtterzipArchive *_handle,
                                              uint32_t index,
                                              const char **out_path_utf8,
                                              size_t *out_len);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* OTTERZIP_H */